testdata/baselines/reference/compiler/declarationEmitRetainsImportOfCastType.errors.txt
declarationEmitRetainsImportOfCastType.ts(1,30): error TS2307: Cannot find module 'jotai' or its corresponding type declarations.


==== declarationEmitRetainsImportOfCastType.ts (1 errors) ====
    import { WritableAtom } from 'jotai'
                                 ~~~~~~~
!!! error TS2307: Cannot find module 'jotai' or its corresponding type declarations.
    
    export function focusAtom() {
      return null as unknown as WritableAtom<any, any, any>
    }
    